--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,13 +65,13 @@ jobs:
       fail-fast: false
       matrix:
         IMAGES:
-        - "library/postgres/15 library/postgres/14 library/postgres/13 library/postgres/12"
+        - "library/postgres/16 library/postgres/15 library/postgres/14 library/postgres/13 library/postgres/12"
         - "library/postgres/11 library/postgres/10 library/postgres/latest library/postgres/9"
         - "library/postgres/9.6 library/postgres/9.5 library/postgres/9.4 library/postgres/9.3 library/postgres/9.2 library/postgres/9.1"
         - "corpusops/postgis-bare/15-3 corpusops/postgis-bare/14-3"
         - "corpusops/postgis-bare/13-3 corpusops/postgis-bare/12-3"
         - "corpusops/postgis-bare/11-3 corpusops/postgis-bare/11-2.5 corpusops/postgis-bare/10-2.4 corpusops/postgis-bare/10-2.5 corpusops/postgis-bare/10-3"
-        - "corpusops/pgrouting-bare/15-3-3.4 corpusops/pgrouting-bare/14-3-3.4 corpusops/pgrouting-bare/13-3-3.4 corpusops/pgrouting-bare/12-2.5-2.6 corpusops/pgrouting-bare/12-3-3.0 corpusops/pgrouting-bare/12-3-3.1"
+        - "corpusops/pgrouting-bare/14-3-3.4 corpusops/pgrouting-bare/13-3-3.4 corpusops/pgrouting-bare/12-2.5-2.6 corpusops/pgrouting-bare/12-3-3.0 corpusops/pgrouting-bare/12-3-3.1"
         - "corpusops/pgrouting-bare/11-2.5-2.5 corpusops/pgrouting-bare/11-2.5-2.6 corpusops/pgrouting-bare/11-3-3.0 corpusops/pgrouting-bare/11-3-3.1"
         - "corpusops/pgrouting-bare/10-2.4-2.4 corpusops/pgrouting-bare/10-2.4-2.5 corpusops/pgrouting-bare/10-2.4-2.6 corpusops/pgrouting-bare/10-2.5-2.4 corpusops/pgrouting-bare/10-2.5-2.5 corpusops/pgrouting-bare/10-2.5-2.6"
         - "corpusops/postgis-bare/9.0-2.1 corpusops/postgis-bare/9.1-2.2 corpusops/postgis-bare/9.2-2.2 corpusops/postgis-bare/9.2-2.3 corpusops/postgis-bare/9.3-2.3 corpusops/postgis-bare/9.3-2.4 corpusops/postgis-bare/9.4-2.3 corpusops/postgis-bare/9.4-2.5 corpusops/postgis-bare/9.5-2.4 corpusops/postgis-bare/9.5-2.5 corpusops/postgis-bare/9.6-2.4 corpusops/postgis-bare/9.6-2.5"
