--- a/corpusops/pgrouting-bare/13-3-3.0/Dockerfile
+++ b/corpusops/pgrouting-bare/13-3-3.0/Dockerfile
@@ -1,6 +1,6 @@
-ARG ANCESTOR=corpusops/postgis-bare:16
+ARG ANCESTOR=corpusops/pgrouting-bare:13-3-3.0
 ARG RSYNC=corpusops/rsync
-FROM corpusops/postgis-bare:16 AS final
+FROM corpusops/pgrouting-bare:13-3-3.0 AS final
 ARG DO_UPDATE=y
 ARG NONINTERACTIVE=y
 ARG DEBIAN_FRONTEND=noninteractive
