--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,7 +65,7 @@ jobs:
       fail-fast: false
       matrix:
         IMAGES:
-        - "library/postgres/latest library/postgres/16 library/postgres/15 library/postgres/14"
+        - "library/postgres/latest library/postgres/17 library/postgres/16 library/postgres/15 library/postgres/14"
         - "library/postgres/13 library/postgres/12"
         - "corpusops/postgis-bare/16-3 corpusops/postgis-bare/15-3 corpusops/postgis-bare/14-3"
         - "corpusops/pgrouting-bare/16-3-3.6 corpusops/pgrouting-bare/15-3-3.6"
